--- a/css/network_service_monitoring.css
+++ b/css/network_service_monitoring.css
@@ -9,12 +9,15 @@
 }
 
 body{
+/*background-image: url('../img/background/background.jpg');*/
+
 background-image: url('../img/background/background.jpg');
+background-color: #1f1359;
 background-repeat: no-repeat;
 background-size:cover;
 background-position: center;
 height: 100vh;
-backdrop-filter: blur(5px);
+backdrop-filter: blur(10px);
 }
 
 main{
