--- a/css/network_service_monitoring.css
+++ b/css/network_service_monitoring.css
@@ -44,7 +44,10 @@ section.principal {
 }
 
 
-div.title{
+div.title {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
     text-align: center;
     text-wrap: nowrap;
 }
@@ -58,6 +61,9 @@ div.title h2 {
     font-size: clamp(.8rem, 2vw, 1.9rem);
 }
 
+div.title h3 {
+    font-size: clamp(.65rem, 1.5vw, 1.3rem);
+}
 
 section.register-form {
     width: 100%;
@@ -75,6 +81,7 @@ section.register-form {
     justify-content: center;
 }
 
+/*
 .input-container input {
     height: 38px;
     padding: 3px;
@@ -88,12 +95,13 @@ section.register-form {
     outline: 1px solid #7564ee;
 }
 
+
 .input-container button {
     height: 100%;
     padding: 3px;
     flex: 1;
     border: none;
-    background-color: #7564ee;
+    background-color: #12a727;
     color: #f4f6f0;
     border-radius: 0px 6px 6px 0px;
 
@@ -105,23 +113,44 @@ section.register-form {
 
     transition: background-color .2s;
 }
+*/
+
+
+
+.input-container button {
+    height: 38px;
+    padding: 3px;
+    flex: 1;
+    border: none;
+    background-color: #6244e3;
+    color: #f4f6f0;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    transition: transform 0.2s cubic-bezier(0.61, 1, 0.88, 1), box-shadow 0.2s cubic-bezier(0.61, 1, 0.88, 1);
+    cursor: pointer;
+}
 
 .input-container button svg {
-fill: #f4f6f0;
-background-color: transparent;
+    fill: #f4f6f0;
+    background-color: transparent;
 }
 
-.input-container button:hover{
-    cursor: pointer;
-    background-color: #6244e3;
+.input-container button:hover {
+    transform: scale(1.06);
+    box-shadow: 0px 0px 8px 0px #9891f4;
 }
 
-.input-container button:active{
-    cursor: pointer;
-    background-color: #9891f4;
+.input-container button:active {
+    background-color: #5332cf;
+    transform: scale(1);
+    box-shadow: none;
 }
 
-section.features{
+section.features {
     width: 100%;
     color: #f4f6f0;
     display: flex;
@@ -130,14 +159,14 @@ section.features{
     gap: 20px;
 }
 
-.features p{
+.features p {
     gap: 5px;
     display: flex;
     flex-direction: row;
     font-size: clamp(.9rem, 2vw, 1.4rem);
 }
 
-.features p svg{
+.features p svg {
     fill: #f4f6f0;
     height: 30px;
 }
