Finish the base page of transport

--- a/aplication/css/palette.css
+++ b/aplication/css/palette.css
@@ -256,6 +256,9 @@
   --accent-red-hover:#D12945;
   --accent-yellow: #ffef41;
 
+  --accent-blue: #0600EF;
+  --accent-blue-hover: #1300D0;
+
   /*Others*/
   --dividingLine-color: #5e3dc2;
   /*#ff33ff*/
