--- a/aplication/css/palette.css
+++ b/aplication/css/palette.css
@@ -234,7 +234,7 @@
   /*Alert*/
   --alert-background:#170F2F;
   --alert-success:#B5F730;
-  --alert-warn:#ffd000;
+  --alert-warning:#ffd000;
   --alert-error:#F73051;
 
   /*Scroll bar*/
