--- a/aplication/css/style_home.css
+++ b/aplication/css/style_home.css
@@ -5,7 +5,6 @@
     position: relative;
 }
 
-
 .heartbeat-animation-container {
     display: flex;
     justify-content: center;
@@ -30,33 +29,14 @@
     padding: 1px;
 }
 
-.heartbeat-animation-core.down svg {
-    fill: var(--accent-red);
-}
-
-.heartbeat-animation-core.waiting svg {
-    fill: var(--accent-yellow);
-}
-
-.heartbeat-animation-core svg {
-    fill: var(--accent-green);
-}
 
 .heartbeat-animation-heartbeat {
-    background-color: var(--accent-green);
     width: 100%;
     height: 100%;
     border-radius: 50%;
     display: block;
     animation: heartbeat 2s ease 0s infinite normal;
-}
 
-.heartbeat-animation-heartbeat.down {
-    background-color: var(--accent-red);
-}
-
-.heartbeat-animation-heartbeat.waiting {
-    background-color: var(--accent-yellow);
 }
 
 @keyframes heartbeat {
@@ -81,12 +61,9 @@
     flex-direction: column;
     color: var(--text-color);
     background-color: transparent;
-    /*border: 1px solid var(--input-border);*/
     border-radius: 8px;
     transition: .3s;
-   /*interpolate-size: allow-keywords;*/
-
-   gap: 8px;
+    gap: 8px;
 }
 
 .row {
@@ -98,10 +75,85 @@
     gap: 10px;
     padding: 5px;
     cursor: pointer;
-    border: 1px solid var(--input-border);
     border-radius: 8px;
     background-color: transparent;
     animation: fadein 2s cubic-bezier(0.5, 1, 0.89, 1) 0s 1 normal forwards;
+    border: 1px solid var(--input-border);
+}
+
+.row:hover {
+    background-color: var(--row-hover);
+}
+
+/*Place holder*/
+#row_place_holder {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#row_place_holder:hover {
+    background-color: transparent;
+}
+
+/*up*/
+.row.up {
+    border: 1px solid var(--input-border);
+}
+
+.row.up:hover {
+    background-color: var(--row-hover);
+}
+
+.row.up .heartbeat-animation-heartbeat {
+    background-color: var(--accent-green);
+}
+
+.row.up .heartbeat-animation-core svg {
+    fill: var(--accent-green);
+}
+
+/*waiting*/
+.row.waiting .heartbeat-animation-heartbeat {
+    background-color: var(--text-color);
+}
+
+.row.waiting .heartbeat-animation-core svg {
+    fill: var(--text-color);
+}
+
+/*down*/
+.row.down {
+    border: 1px solid var(--row-background-down);
+    background-color: var(--row-background-down);
+}
+
+.row.down:hover {
+    background-color: var(--row-background-down-hover);
+}
+
+.row.down .heartbeat-animation-heartbeat {
+    background-color: black;
+}
+
+.row.down .heartbeat-animation-core svg {
+    fill: var(--alert-error);
+}
+
+.row.warning {
+    border: 1px solid var(--row-background-warning);
+}
+
+.row.warning:hover {
+    background-color: var(--row-background-warning-hover);
+}
+
+.row.warning .heartbeat-animation-heartbeat {
+    background-color: var(--alert-warning);
+}
+
+.row.warning .heartbeat-animation-core svg {
+    fill: var(--alert-warning);
 }
 
 @keyframes fadein {
@@ -122,100 +174,6 @@
     font-size: clamp(.68rem, 1.5vw, .8rem);
 }
 
-@media (max-width: 470px) {
-    .row {
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        gap: 0;
-    } 
-    .host-extra-info{
-        margin: auto;
-    }
-    .host-data p {
-        text-align: center;
-    }
-    .up-since {
-        justify-content: center;
-    }
-}
-
-.row:hover {
-    background-color: var(--row-hover);
-}
-
-.special-row{
-    display: flex;
-    justify-content: center;
-    border-radius: 8px !important;
-    padding: 8px;
-    animation: none;
-    
-}
-
-.special-row p{
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-.special-row:hover{
-    background-color: var(--background-150);
-    cursor: context-menu;
-}
-
-
-
-.area-statistics {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 8px;
-    padding: 10px;
-    cursor: context-menu;
-}
-
-.statistics-card {
-    color: var(--text-color);
-    background-color: var(--form-background);
-    border: 1px solid var(--input-border);
-    border-radius: 8px;
-    padding: 10px;
-    text-align: center;
-    flex: 1;
-    flex-wrap: wrap;
-    min-width: 150px;
-}
-
-.statistics-card h1 {
-    font-size: 1.5rem;
-}
-
-.statistics-card.up h1 {
-    color: #8bc81a;
-}
-
-.statistics-card.down h1 {
-    color: var(--red-600);
-}
-
-.statistics-card.monitored h1 {
-    color: var(--blue-500);
-}
-
-
-.monitored-hosts {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    gap: 8px;
-    padding: 10px;
-    border-radius: 8px;
-    position: relative;
-    background-color: var(--form-background);
-}
-
-
 .host-extra-info {
     padding: 5px;
     margin-left: auto;
@@ -225,14 +183,14 @@
 }
 
 .host-extra-info p {
-    font-size:clamp(.7rem, 1.5vw, .85rem);
+    font-size: clamp(.7rem, 1.5vw, .85rem);
 
 }
 
 .host-extra-info .up-since {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-end;
     gap: 8px;
 }
 
@@ -245,37 +203,126 @@
     font-size: clamp(.6rem, 1.5vw, .77rem);
 }
 
-svg.red {
-    fill: var(--red-500);
+
+@media (max-width: 470px) {
+    .row {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        gap: 0;
+    }
+
+    .host-extra-info {
+        margin: auto;
+    }
+
+    .host-data p {
+        text-align: center;
+    }
+
+    .up-since {
+        justify-content: center;
+    }
 }
 
-svg.yellow {
-    fill: var(--yellow-700);
+.area-statistics {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 8px;
+    cursor: context-menu;
 }
 
-svg.blue {
-    fill: var(--blue-500);
-}
-
-.loader-hourglass svg {
-    fill: var(--violet-500);
-}
-
-.loader-hourglass {
+.statistics-card {
+    color: var(--text-color);
+    background-color: var(--form-background);
+    border-radius: 8px;
     padding: 10px;
+    text-align: center;
+    flex: 1;
+    flex-wrap: wrap;
+    min-width: 150px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
 }
 
+.statistics-card h1 {
+    font-size: 1.5rem;
+}
 
+.statistics-card.up h1 {
+    color: var(--soft-green);
+}
+
+.statistics-card.down h1 {
+    color: var(--soft-red);
+}
+
+.statistics-card.monitored h1 {
+    color: var(--soft-violete);
+}
+
+.monitored-hosts {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 8px;
+    padding: 10px;
+    border-radius: 8px;
+    position: relative;
+    background-color: var(--form-background);
+}
+
+.spinner-circle {
+    fill: var(--spinner-loader);
+}
 
 /*drop down*/
 
-
 .dropdown_menu {
-    height: 80px;
-    width: 160px;
+    height: 40px;
+    min-width: 100%;
 }
 
-.dropdown_menu svg{
+.dropdown_menu_container.full {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.dropdown_menu_container.full .dropdown-button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown_menu_container.full .dropdown_menu {
+    transform: translate(0px, 37px);
+    width: 100%;
+}
+
+.dropdown_menu_container.full .dropdown_menu:not(.collapsed) {
+    height: 95px;
+}
+
+
+.dropdown_menu_container.full #ping_agent::after{
+    content: "Check the availability and latency of the devices";
+    text-wrap: wrap;
+    text-align: center;
+    font-size: .9rem;
+}
+
+.dropdown_menu_container.full a{
+    flex-direction: column;
+    border-bottom: 1px solid var(--dropdownMenuItem-option-divider);
+}
+
+.dropdown_menu svg {
     fill: var(--accent-green);
 }
 
@@ -295,4 +342,3 @@ svg.blue {
     gap: 5px;
     position: relative;
 }
-
