--- a/aplication/css/ping_agent.css
+++ b/aplication/css/ping_agent.css
@@ -13,7 +13,9 @@
     gap: 8px;
     padding: 20px;
     border-radius: 8px;
-    max-width: 700px;
+    min-width: 330px;
+    max-width: 600px;
+    width: 60%;
     height: 100%;
 }
 
@@ -130,6 +132,7 @@
     flex-direction: column-reverse;
     gap: 20px;
     height: 100%;
+    font-size: clamp(.6rem, 1.5vw, .9rem);
 }
 
 .transport {
@@ -142,10 +145,10 @@
     padding: 10px;
     border-radius: 8px;
     width: 100%;
+
 }
 
 .transport a {
-    font-size: .7rem;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -154,7 +157,8 @@
     padding: 5px;
     border-radius: 8px;
     width: fit-content;
-
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .transport a svg {
@@ -268,6 +272,7 @@ button.create-agent:disabled {
         border: 1px solid var(--bc, var(--border));
         background: var(--b, var(--background));
         transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+
     }
 
     .checkbox-wrapper-13 input[type=checkbox]:after {
@@ -346,6 +351,7 @@ button.create-agent:disabled {
     box-sizing: inherit;
 
 
+
 }
 
 .checkbox-wrapper-13 *:before,
@@ -353,8 +359,9 @@ button.create-agent:disabled {
     box-sizing: inherit;
 }
 
-.checkbox-text{
+.checkbox-text {
     display: flex;
     align-items: center;
     gap: 5px;
+
 }
