--- a/aplication/css/style.css
+++ b/aplication/css/style.css
@@ -228,7 +228,12 @@ main.dashboard {
 
 .input:disabled {
     cursor: not-allowed;
-    background-color: red;
+    background-color: var(--input-disabled-bg);
+    color: var(--text-color-label_name);
+}
+
+.input:disabled:hover{
+    border-color: var(--input-border);
 }
 
 .input:hover {
@@ -833,7 +838,7 @@ dialog form button .text.show {
     /* Transparencia inicial */
     transition: opacity 0.3s;
     /* Suaviza la aparición */
-    font-size: 0.9rem;
+    font-size: 0.7rem;
 }
 
 /* Flecha del tooltip */
