--- a/aplication/css/ping_agent_view.css
+++ b/aplication/css/ping_agent_view.css
@@ -3,7 +3,44 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    z-index: 0;
 }
+
+#waiting-curtain {
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.486);
+    backdrop-filter: blur(8px);
+    z-index: 4;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+#waiting-curtain h1{
+    color: var(--alert-success);
+    animation: pulse_regular 2s ease 0s infinite normal forwards;
+}
+
+@keyframes pulse_regular {
+	0% {
+		transform: scale(1);
+	}
+
+	50% {
+		transform: scale(1.1);
+	}
+
+	100% {
+		transform: scale(1);
+	}
+}
+
+
 
 .container {
     width: 90%;
@@ -153,7 +190,6 @@
 
 .current-status h4.waiting {
     color: var(--alert-success);
-    font-size: .9rem;
 }
 
 .current-status h4.down {
@@ -254,7 +290,8 @@
     gap: 8px;
     align-items: center;
 }
-.log h1 svg{
+
+.log h1 svg {
     width: 16px;
     height: 16px;
 }
@@ -290,7 +327,7 @@
     gap: 5px;
     padding: 5px;
     text-align: left;
-    flex:1;
+    flex: 1;
 }
 
 .log_row .cause {
