--- a/aplication/css/transports.css
+++ b/aplication/css/transports.css
@@ -161,8 +161,13 @@ fill: var(--alert-success);
 
 .transport_options button.resend svg {
     fill: var(--text-color);
+    width: 16px;
+    height: 16px;
 }
 
+.transport_options button.resend:disabled {
+    background-color: transparent;
+}
 
 
 /*
