--- a/aplication/css/transports.css
+++ b/aplication/css/transports.css
@@ -28,6 +28,7 @@ main {
     flex-direction: row;
     gap: 8px;
     align-items: center;
+    cursor: context-menu;
 }
 
 .form-container .tittle svg {
@@ -41,6 +42,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    cursor: context-menu;
 }
 
 .subtittle a{
@@ -77,7 +79,7 @@ main {
     background-color: var(--button-primary-disabled);
 }
 
-.form-container .add_transport.solo {
+.form-container .add_transport.large {
     background-color: var(--button-primary);
     width: 100%;
     height: 38px;
@@ -186,7 +188,7 @@ DIALOGS
     gap: 3px;
 }
 
-dialog .add_email{
+#addEmailBtn, #addTelegramBtn {
     background-color: var(--button-primary);
     width: 100%;
     height: 38px;
