--- a/aplication/css/style.css
+++ b/aplication/css/style.css
@@ -187,14 +187,12 @@ main.dashboard {
     overflow: auto;
 }
 
-
-/*
-.card {
-    padding: 8px;
+.card{
+    padding: 15px;
+    background-color: var(--card-bg);
     border-radius: 8px;
-    box-shadow: 0px 0px 5px 0px var(--background-200);
+    box-shadow: 0px 0px 15px 0px var(--card-shadow);
 }
-*/
 
 
 
