--- a/css/network_service_monitoring.css
+++ b/css/network_service_monitoring.css
@@ -1,67 +1,352 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
+@import url(https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap);
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: "Lexend Deca", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    cursor: context-menu;
+    box-sizing: border-box;
 }
 
-body{
-/*background-image: url('../img/background/background.jpg');*/
-
-background-image: url('../img/background/background.jpg');
-background-color: #1f1359;
-background-repeat: no-repeat;
-background-size:cover;
-background-position: center;
-height: 100vh;
-backdrop-filter: blur(10px);
-}
-
-main{
-    background-color: rgba(0, 0, 0, 0.397);
-    height: 100%;
+body {
+    background-image: url(../img/background/background.jpg);
+    background-color: var(--background);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    backdrop-filter: blur(15px);
     position: relative;
-
 }
 
-section{
-    color: whitesmoke;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+main {
+    background-color: rgb(0 0 0 / .397);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+}
+
+section.information {
+    color: var(--text-color);
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    gap: 50px;
+    width: 70%;
+}
+
+div.title {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    text-align: center;
     text-wrap: nowrap;
+    align-items: center
 }
 
-section h1{
-    font-size: clamp(2rem, 6vw, 6rem);
-  
+div.title h1 {
+    font-size: clamp(3.5rem, 6vw, 4rem);
+    display: flex;
+    flex-direction: row;
+    align-items: center
 }
 
-section h2{
-    font-size: clamp(.8rem, 2vw, 1.9rem);
+div.title img {
+    width: clamp(100px, 10vw, 130px)
 }
 
-section svg{
-    fill: whitesmoke;
-    width:   clamp(50px, 5vw, 100px);;
-    height:  clamp(50px, 5vw, 100px);
-    margin-top: 50px;
-    animation: spin 1.5s cubic-bezier(0.5, 1, 0.89, 1) infinite
+div.title h2 {
+    font-size: clamp(.8rem, 2vw, 1.4rem)
+}
+
+div.title h3 {
+    margin-top: 20px;
+    font-size: clamp(.7rem, 1.5vw, 1.2rem);
+    animation: pulse_regular 2s ease 0s infinite normal forwards
+}
+
+div.title h3 span {
+    color: var(--alert-success)
+}
+
+@keyframes pulse_regular {
+    0% {
+        transform: scale(1)
+    }
+
+    50% {
+        transform: scale(1.1)
+    }
+
+    100% {
+        transform: scale(1)
+    }
+}
+
+section.register-form {
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.email-form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    background-color: var(--input-background);
+    border-radius: 10px;
+    max-width: 450px;
+}
+
+.email-form input {
+    width: 100%;
+    border-radius: 8px 0 0 8px
+}
+
+#sendEmailBtn {
+    padding: 5px;
+    text-wrap: nowrap;
+    border: none;
+    background-color: var(--button-primary);
+    color: var(--text-color);
+    border-radius: 0 8px 8px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    transition: transform 0.2s cubic-bezier(.33, 1, .68, 1), box-shadow 0.2s cubic-bezier(.33, 1, .68, 1);
+    cursor: pointer;
+    text-decoration: none
+}
+
+#sendEmailBtn svg {
+    fill: var(--text-color);
+    background-color: #fff0
+}
+
+#sendEmailBtn:hover {
+    background-color: var(--button-primary-hover)
+}
+
+#sendEmailBtn:active {
+    transform: scale(.95)
+}
+
+#sendEmailBtn:disabled {
+    cursor: not-allowed;
+    background-color: var(--button-primary-disabled);
+    transform: none
+}
+
+.label {
+    width: 100%;
+    display: grid;
+    grid-template-areas: "input";
+    text-wrap: nowrap;
+    min-width: 125px
+}
+
+.input {
+    grid-area: input;
+    padding-left: 10px;
+    text-align: left;
+    height: 40px;
+    width: 100%;
+    border-radius: 8px;
+    border: 1px solid var(--input-border);
+    cursor: pointer;
+    background-color: var(--input-background);
+    transition: border-color .3s;
+    color: var(--text-color)
+}
+
+.input:disabled {
+    cursor: not-allowed;
+    background-color: var(--input-disabled-bg);
+    color: var(--text-color-label_name)
+}
+
+.input:disabled:hover {
+    border-color: var(--input-border)
+}
+
+.input:hover {
+    border-color: var(--input-border-hover)
+}
+
+.input:not(.error):focus {
+    border: 1px solid var(--input-focus)
+}
+
+.input:not(.error):focus-visible {
+    outline: 1px solid var(--input-focus-visible)
+}
+
+.label__name {
+    grid-area: input;
+    z-index: 1;
+    height: 100%;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    transition: .2s;
+    cursor: pointer;
+    justify-self: start;
+    color: var(--text-color-label_name);
+    margin-left: 8px;
+    pointer-events: none;
+    font-size: clamp(.75rem, 1.5vw, .8rem)
+}
+
+.label__name svg {
+    fill: var(--text-color);
+    width: 18px
+}
+
+.input:focus+.label__name,
+.input:not(:placeholder-shown)+.label__name {
+    transform: none;
+    opacity: 0;
+    transition: opacity .3s
+}
+
+.error-message {
+    color: var(--alert-error);
+    font-size: .675em;
+    margin-top: .25rem;
+    text-wrap: nowrap
+}
+
+section.features {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 10px;
+    width: 100%;
+    height: 100%
+}
+
+.card {
+    padding: 15px;
+    background-color: var(--card-bg);
+    border-radius: 8px;
+    box-shadow: 0 0 15px 0 var(--card-shadow)
+}
+
+.card.feature {
+    border: 1px solid var(--soft-green);
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    text-align: center
+}
+
+.card.feature h1 {
+    font-size: clamp(1.5rem, 1.8vw, 1.7rem)
+}
+
+.card.feature p {
+    gap: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: clamp(.8rem, 1.8vw, 1rem)
+}
+
+.card.feature p svg {
+    fill: var(--text-color);
+    width: 20px;
+    height: 20px
+}
+
+.loader-hourglass {
+    display: none;
+    height: 100%;
+    justify-content: center;
+    align-items: center
+}
+
+.loader-hourglass.show {
+    display: flex;
+    gap: 5px
+}
+
+.spinner-hourglass {
+    animation: spin 1s cubic-bezier(.33, 1, .68, 1) infinite
 }
 
 @keyframes spin {
-    from {
-        transform:rotate(0deg);
+    0% {
+        transform: rotate(0deg)
     }
-    to {
-        transform:rotate(360deg);
+
+    100% {
+        transform: rotate(360deg)
     }
+}
+
+button .text.hide {
+    display: none
+}
+
+::-webkit-scrollbar {
+    width: 12px
+}
+
+::-webkit-scrollbar-track {
+    background: var(--scrolBar-background)
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--scrolBar-bar);
+    border-radius: 10px;
+    border: 2px solid var(--scrolBar-background)
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--scrolBar-hover)
+}
+
+html {
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrolBar-bar) var(--scrolBar-background)
+}
+
+:root {
+    --background: #130c27;
+    --text-color: #F5F0FE;
+    --text-color-label_name: #f5f0fe62;
+    --button-primary: #7230f7;
+    --button-primary-hover: #641ee3;
+    --button-primary-disabled: #9f85ff;
+    --scrolBar-background: #170F2F;
+    --scrolBar-bar: #392574;
+    --scrolBar-hover: #392574;
+    --input-background: #17102c;
+    --input-disabled-bg: #170F2F;
+    --input-disabled-border: #26184e;
+    --input-border: #26184e;
+    --input-border-hover: #5e3dc2;
+    --input-focus: #26184e;
+    --input-focus-visible: #26184e;
+    --soft-green: #b5f73093;
+    --card-bg: #170f2fd7;
+    --card-shadow: #110B22;
+    --alert-background: #170F2F;
+    --alert-success: #B5F730;
+    --alert-warning: #ffd000;
+    --alert-error: #F73051;
 }
